--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "concurrently": "^9.1.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4"
+  },
+  "dependencies": {
+    "axios": "^1.8.4"
   }
 }
